P2P Web, Mudanca na Introducao & Fundamentacao Teorica, Consideracoes Finais, Revisao Ortografica e revisao formatacao
Adicionado: P2P Web, Considerancoes Finais;
Mudanca na Introducao & Fundamentacao Teorica; Revisao Ortografica e
revisao de formatacao;
Referencias adicionadas: Cisco VNI Global IP Traffic Forecast(Cisco) &
What is the P2P Web?(Paul Frazee);

--- a/document.bib
+++ b/document.bib
@@ -122,3 +122,16 @@ year="2004",
 url="https://arxiv.org/pdf/cs/0311017.pdf"
 }
 
+@misc{cisco,
+author="Cisco VNI Global IP Traffic Forecast",
+title={\textit{The Zettabyte Era — Trends and Analysis – Cisco}},
+howpublished="The Zettabyte Era — Trends and Analysis – Cisco",
+url="http://www.cisco.com/c/en/us/solutions/collateral/service-provider/visual-networking-index-vni/vni-hyperconnectivity-wp.html"
+}
+
+@misc{paul2016,
+author="Paul Frazee",
+title={\textit{What is the P2P Web?}},
+year="2016",
+url="https://pfrazee.github.io/blog/what-is-the-p2p-web"
+}
