--- a/document.bib
+++ b/document.bib
@@ -75,6 +75,15 @@ doi="10.1007/s11432-011-4464-8",
 url="http://dx.doi.org/10.1007/s11432-011-4464-8"
 }
 
+@BOOK{Kurose,
+  TITLE = {Redes de computadores e a internet},
+  SUBTITLE = {Uma abordagem top-down},
+  AUTHOR = {Kurose, James F. 
+		and Ross, Keith W.},
+  YEAR = {2013}, 
+  PUBLISHER = {Pearson},
+}
+
 @misc{sisp2p,
 author="Scremin, Alberto
 and Herrera, Barbara
