--- a/document.tex
+++ b/document.tex
@@ -191,9 +191,9 @@ O \textbf{Napster} foi uma das primeiras aplicações de compartilhamento de arq
 
 A rede se baseia num servidor central de índices. Os nós da rede registram uma lista dos arquivos que desejam compartilhar. Dessa forma, a busca é processada baseando-se em \textbf{palavras chave} e retornará uma lista com os arquivos encontrados e informações como a banda disponível, tamanho e fonte. 
 
-\begin{figure}[!h]
+\begin{figure}[ht]
 \begin{center}
-  \includegraphics{img//ilustracaoiot.png} 
+  \includegraphics[scale=0.5]{img//ilustracaoiot.png} 
   \caption{Protocolo Napster \cite{howstuffworks} \label{figure1}}
 \end{center}
 \end{figure}
