--- a/document.tex
+++ b/document.tex
@@ -162,7 +162,7 @@ A rede cresce de acordo com o aumento dos provedores e consumidores inseridos ne
 		\caption{Comparação no tempo de distribuição entre cliente-servidor e P2P \cite{Kurose}}
 	\end{center}
 \end{figure}
-
+Na imagem acima temos duas funções que demonstram o tempo mínimo para a distribuição de um dado, sendo a azul representando o modelo cliente-servidor, que tem um comportamento linear, e a preta representando o modelo P2P, com um comportamento que podemos comparar ao de uma função logarítmica. 
 \subsubsection{Auto-Organização}
 Com a inserção de um novo par na rede, requer uma mínima ou quase nenhuma configuração para ela começar a se comunicar com os outros pares já presentes na rede,\cite{ACohenBAD}
 
