--- a/document.tex
+++ b/document.tex
@@ -148,7 +148,7 @@ A imagem acima representa um sistema P2P, onde todos os nós são ligados a todo
 A imagem acima representa um esquema misto, onde existe um servidor centralizado que recebe as requisições e direciona a requisição para um nó que possa respondê-la.
 
 \section{Discussão}
-Na seção anterior foi explicado sobre alguns exemplos de aplicações que utilizam a arquitetura P2P, e suas vantagens e desvantagens particulares, faremos agora uma analise mais geral sobre a arquitetura em sí, com suas principais vantagens e desvantagens.
+Na seção anterior foi explicado sobre o funcionamento da arquitetura P2P, faremos agora uma analise geral sobre a arquitetura em sí, com suas principais vantagens e desvantagens, e um exploit em um dos protocolos P2P mais populares.
 
 \subsection{Vantagens}
 As vantagens obtidas ao se utilizar uma arquitetura P2P abrangem desde não existe a necessidade de um servidor dedicado, o custo total para se construir e fazer a manutenção necessária para este tipo de rede é bem menor, até a existência de uma dependência central, a arquitetura P2P é mais confiável, pois a queda de um par não afeta diretamente os outros pares.
